// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "pgdV06bQGbdMH2QFoMRa2gOI0OY=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "swHoAFuuLIxgRR95RWdeQxpNyrc=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "EpKK14CXyjrSNQsuEEKqSalxDxE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "I+1b5N1kyPbt/73pkZi5tRoAt68=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "xP4FebG8AhkGm5G5892sV4YgrI4=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "kBuPHHOR70Cwg3Dk7FWer5liJwA=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "tXHtpmi5G+GVRC3Q/LfR8oZCIPc=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "CJ/V9AnQ8eLgxVNIdSJEWQEKx0Y=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "WVAAFJR184DLfdjyAB6GrF25NrA=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "qEOJwjGu+9nCvaFoBesYyRPupEI=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "pgdV06bQGbdMH2QFoMRa2gOI0OY=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "oVIGx8AEYgy8IdEgG+IXik/5MGg=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "DHc1UOzcvrRyRP7cNfkhee0USQE=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "bBaaDceapg0y5AjIvm6Qiia9piQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "EbGCBHuxGjidbGnwPQAUDTjLhfM=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "EosxEx1RKCQJaEWoFaE330XDgoQ=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "m2X+bR/OFua/95h30cmR2etwx7I=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "O//Fo+OWtVMnTXLJF27qckzlJ9I=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "pgdV06bQGbdMH2QFoMRa2gOI0OY=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "HRiaji5gEHVl7Pmqt0mz4ZuoPq0=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "Z9+9swX5pD8tvBSGrUO6/FAHEtI=",
              "name": "valid-component-name",
            },
          ],
          "hash": "y1P58rsasNVNcUKAcaqTBtyZh04=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "zYWGs3XKHZhVmyYmc8DCTw/WGL0=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "6WcC942u0YV5yHp6JaU8J3F1M6Y=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "pgdV06bQGbdMH2QFoMRa2gOI0OY=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "iJCGM1NQ5EBCXNSFSuDjg7/G/O4=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "DMYROzP/GYB/aoia+R5JUflx37w=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "zQmeniXwoag2rYtOWGtLO1oiwlQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "fo7Ru8Beqs0TA0wrTy9zSm/xaec=",
              "name": "sample-result-component",
            },
          ],
          "hash": "xK/MRdO5jewir82vH6Q1dcROvNo=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "Jg3pVwrL5wDWiTMeZMd6OrbPZ9Q=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "GZM4i4adcjhsCPw8ncD51gWZhGc=",
  "name": "no-args",
}
`;
